cd2t-100-core/src/test/resources/validGroovy/NopRules.groovy
@Opcode("NOP")
@Rules(["clampat", "overflow"])
class Nop {
  static apply(ExecutionEnvironment execEnv) {
    return;
  }
}
