cd2t-100-core/src/test/resources/invalidGroovy/InvalidFirstArgument.groovy
@Opcode("INVFARG")
class InvalidFirstArgument {
  static void apply(String execEnv) {

  }
}
